// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP persian/afghanistan IDX page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`AMP persian/afghanistan IDX page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP persian/afghanistan IDX page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=69&p=persian.afghanistan.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Acps%3A3cda1d8c-ffa2-03ae-e050-380a4e8056f3]&x2=[amp]&x3=[news-persian]&x4=[fa]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[index-section]&x8=[simorgh]&x9=[%D8%B5%D9%81%D8%AD%D9%87%2520%D8%A7%D9%81%D8%BA%D8%A7%D9%86%D8%B3%D8%AA%D8%A7%D9%86%2520-%2520BBC%2520News%2520%D9%81%D8%A7%D8%B1%D8%B3%DB%8C]&x11=[2016-09-20T16%3A06%3A44.000Z]&x12=[2023-07-24T07%3A12%3A08.000Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "Index",
    "domain": "test.bbc.co.uk",
    "sections": "Persian, Persian - IDX",
    "title": "صفحه افغانستان - BBC News فارسی",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.co.uk/persian/send/u50853555",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Anchors should match text and url 8`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP persian/afghanistan IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`AMP persian/afghanistan IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`AMP persian/afghanistan IDX page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "جنگ اسرائیل-غزه",
  "url": "/persian/topics/clm0z4jgj3xt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "ویدیو",
  "url": "/persian/topics/c6z7mnr559gt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "ايران",
  "url": "/persian/topics/ckdxnwvwwjnt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 7`] = `
{
  "text": "صفحه فعلی, افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 8`] = `
{
  "text": "جهان",
  "url": "/persian/topics/c1d8ye58xl8t",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 9`] = `
{
  "text": "هنر",
  "url": "/persian/topics/c9wpm0epm45t",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 10`] = `
{
  "text": "ورزش",
  "url": "/persian/topics/cnq6879k7yjt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 11`] = `
{
  "text": "اقتصاد",
  "url": "/persian/topics/cl8l9mvlllqt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 12`] = `
{
  "text": "دانش",
  "url": "/persian/topics/ckdxnwr4r1yt",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 13`] = `
{
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs-54099951",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 14`] = `
{
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`AMP persian/afghanistan IDX page Main heading should match text 1`] = `"صفحه افغانستان"`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Canonical link 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`AMP persian/afghanistan IDX page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP persian/afghanistan IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP persian/afghanistan IDX page SEO Heading level 1 1`] = `"صفحه افغانستان"`;

exports[`AMP persian/afghanistan IDX page SEO Lang attribute 1`] = `"fa"`;

exports[`AMP persian/afghanistan IDX page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fa",
        "name": "Persian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/persian/afghanistan",
        "@type": "WebPage",
        "name": "صفحه افغانستان",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7080/persian/afghanistan",
    },
  ],
}
`;

exports[`AMP persian/afghanistan IDX page SEO OG description 1`] = `"تازه ترین اخبار، گزارش ها و تحلیل ها درباره افغانستان؛ از سیاست، جامعه و مسائل امنیتی افغانستان گرفته تا گزارش های ویدیویی و برنامه های رادیو بی بی سی برای افغانستان."`;

exports[`AMP persian/afghanistan IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP persian/afghanistan IDX page SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG locale 1`] = `"fa"`;

exports[`AMP persian/afghanistan IDX page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG type 1`] = `"website"`;

exports[`AMP persian/afghanistan IDX page SEO OG url 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`AMP persian/afghanistan IDX page SEO Page title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter description 1`] = `"تازه ترین اخبار، گزارش ها و تحلیل ها درباره افغانستان؛ از سیاست، جامعه و مسائل امنیتی افغانستان گرفته تا گزارش های ویدیویی و برنامه های رادیو بی بی سی برای افغانستان."`;

exports[`AMP persian/afghanistan IDX page SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 1`] = `"Top story - Afghanistan"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 2`] = `"تحلیل و گزارش"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 3`] = `"ویدیو"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 4`] = `"گوش کنید: تازه‌ترین برنامه‌های رادیوبیشتر"`;

exports[`AMP persian/afghanistan IDX page Story Promo Headline should match text 1`] = `"بارندگی‌ و سیلاب ده‌ها کشته و تخریب صدها خانه‌ مسکونی در میدان‌وردک به‌جا گذاشته است"`;

exports[`AMP persian/afghanistan IDX page Story Promo Image should match image 1`] = `
<amp-img
  alt="خانه‌های آسیب دیده از سیلاب در میدان وردک"
  attribution="@AfghanistanNDMA"
  class="bbc-image"
  fallback=""
  height="2304"
  layout="responsive"
  sizes="(min-width: 1100px) 496px, (min-width: 600px) 45.83vw, 94.29vw"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 660w"
  width="4096"
/>
`;
